--- a/ordinarypaths.css
+++ b/ordinarypaths.css
@@ -433,6 +433,7 @@ footer {
 }
 
 .regi-form {
+    position: relative;
     background-color: white;
     border: 1px solid lightgray;
     padding: 20px 20px;
@@ -457,22 +458,64 @@ textarea {
     margin: 0;
 }
   
-  textarea,
-  input[type="text"],
-  select {
+textarea,
+input[type="text"],
+input[type="tel"],
+input[type="email"],
+select {
     border: 1px solid lightgray;
     padding: 4px;
     margin: 0;
     background: whitesmoke;
     border-radius: 4px;
-  }
-  
-  textarea:focus,
-  input[type="text"]:focus,
-  select:focus {
+}
+
+textarea:focus,
+input[type="text"]:focus,
+input[type="tel"]:focus,
+input[type="email"]:focus,
+select:focus {
     border: 1px solid rgb(171, 197, 247);
     outline: none;
     background: white;
     box-shadow: 0 0 6px rgb(171, 197, 247);
-  }
-  
+}
+ 
+#go-button {
+    border: 1px solid black;
+    background-color: rgb(171, 197, 247);
+    border-radius: 4px;
+}
+
+#go-button:hover {
+    background-color: white;
+    cursor: pointer;
+}
+
+.thanks-box {
+    display: none;
+}  
+
+.thanks {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+}
+
+.thanks p {
+    color: black;
+}
+
+.thanks-box-show {
+    height: 443.5px;
+    width: 469px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(171, 197, 247, 0.9);
+    z-index: 1;
+}
