--- a/ordinarypaths.css
+++ b/ordinarypaths.css
@@ -15,13 +15,13 @@ nav {
 
 #logo-img {
     height: 60px;
-    width: 120px;
+    /* width: 120px; */
     display: block;
 }
 
 header {
     width: 100%;
-    height: 60px;
+    /* height: 60px; */
     position: fixed;
     top: 0;
     background-color: rgb(171, 197, 247);
@@ -43,8 +43,7 @@ header {
 
 @media (min-width: 1000px) {
     .main-nav-logo {
-        gap: 20px;
-    }
+        gap: 20px;    }
 }
 
 .logo-slogan {
@@ -52,6 +51,7 @@ header {
     flex-direction: column;
     align-items: left;
     gap: 5px;
+    margin: 20px;
 }
 
 .logo-slogan h3, p {
@@ -72,6 +72,7 @@ header {
 }
 
 #hamburger-img {
+    margin-right: 10px;
     height: 30px;
     display: block;
 }
@@ -168,7 +169,7 @@ main {
     align-items: center;
 }
 
-@media (min-width:1000px) {
+@media (min-width:480px) {
     .buttons {
         display: flex;
         flex-direction: row;
@@ -192,6 +193,7 @@ main {
 }
 
 .project-pic-container {
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -289,17 +291,14 @@ main {
 }
 
 footer {
-    height: 100px;
     background-color: rgb(171, 197, 247);
 }
 
 .bottom {
     max-width: 1000px;
     margin: 0 auto;
-    padding: 10px 20px;
     display: flex;
-    flex-direction: column;
-    align-items: left;
+    align-content: space-around;
     gap: 5px;
 }
 
@@ -312,6 +311,13 @@ footer {
 .bottom h4, a, p {
     margin: 0;
     color: gray;
+}
+
+
+.footer-links {
+    margin: 20px;
+
+
 }
 
 .footer-links button {
@@ -367,6 +373,8 @@ footer {
  }
 
  .side-menu header {
+    height: 83px;
+    padding: 0 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -485,11 +493,14 @@ select:focus {
     border: 1px solid black;
     background-color: rgb(171, 197, 247);
     border-radius: 4px;
+    height: 40px;
+
 }
 
 #go-button:hover {
     background-color: white;
     cursor: pointer;
+    border: 1px solid black;
 }
 
 .thanks-box {
